# dataverse-for-connecting-memory

./: .gitignore
.github/workflows/: docker-image.yml
dataverse_connecting_memory_2/: manage.py  requirements.txt
dataverse_connecting_memory_2/dataverse_connecting_memory_2/: asgi.py  settings.py  urls.py  wsgi.py
dataverse_connecting_memory_2/main/: utils.py  views.py
dataverse_for_connecting_memory/: .env  Makefile  docker-compose.yaml  pyproject.toml
dataverse_for_connecting_memory/src/: const.py  main.py  utils.py
dataverse_for_connecting_memory/src/tests/: test_main.py  test_utils.py
